// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionStringDelete matches snapshot hidden 1`] = `
<Dialog
  modalType="alert"
  onOpenChange={[Function]}
  open={false}
>
  <DialogSurface>
    <DialogBody>
      <DialogTitle>
        connectionStrings.deleteConnection.title
      </DialogTitle>
      <div
        className="connection-string-delete"
      >
        <div>
          connectionStrings.deleteConnection.body
        </div>
        <textarea
          aria-label="connectionStrings.deleteConnection.input"
          cols={40}
          readOnly={true}
          rows={8}
          value="connectionString"
        />
      </div>
      <DialogActions>
        <Button
          appearance="primary"
          aria-label="connectionStrings.deleteConnection.yes.ariaLabel"
          onClick={[MockFunction]}
        >
          connectionStrings.deleteConnection.yes.label
        </Button>
        <Button
          aria-label="connectionStrings.deleteConnection.no.ariaLabel"
          onClick={[MockFunction]}
        >
          connectionStrings.deleteConnection.no.label
        </Button>
      </DialogActions>
    </DialogBody>
  </DialogSurface>
</Dialog>
`;

exports[`ConnectionStringDelete matches snapshot visible 1`] = `
<Dialog
  modalType="alert"
  onOpenChange={[Function]}
  open={true}
>
  <DialogSurface>
    <DialogBody>
      <DialogTitle>
        connectionStrings.deleteConnection.title
      </DialogTitle>
      <div
        className="connection-string-delete"
      >
        <div>
          connectionStrings.deleteConnection.body
        </div>
        <textarea
          aria-label="connectionStrings.deleteConnection.input"
          cols={40}
          readOnly={true}
          rows={8}
          value="connectionString"
        />
      </div>
      <DialogActions>
        <Button
          appearance="primary"
          aria-label="connectionStrings.deleteConnection.yes.ariaLabel"
          onClick={[MockFunction]}
        >
          connectionStrings.deleteConnection.yes.label
        </Button>
        <Button
          aria-label="connectionStrings.deleteConnection.no.ariaLabel"
          onClick={[MockFunction]}
        >
          connectionStrings.deleteConnection.no.label
        </Button>
      </DialogActions>
    </DialogBody>
  </DialogSurface>
</Dialog>
`;
